Bug 1128401: user-menu down-drop arrows are miss-aligned

--- a/skins/contrib/Dusk/global.css
+++ b/skins/contrib/Dusk/global.css
@@ -236,10 +236,6 @@ hr {
     background-color: #f0f0f0;
 }
 
-.arrow_down {
-    border-top-color: #6070cf;
-}
-
 /* Rules specific for printing */
 @media print {
     #header,
