--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -766,10 +766,6 @@ button[disabled], input[type=submit][disabled], input[type=button][disabled], bu
     padding: 5px 10px;
 }
 
-.arrow_down {
-    border-top-color: #0095dd;
-}
-
 /* Attachments */
 
 #viewFrame {
