--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -496,22 +496,6 @@ div.user_match {
     padding: 0.5em 1em;
 }
 
-.arrow_down {
-    width: 0;
-    height: 0;
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent;
-    border-top: 4px solid #003399;
-    position: relative;
-    top: 1em;
-    margin: 4px 0;
-}
-
-.arrow_container {
-    margin: 0 2px;
-    display: inline-block;
-}
-
 .collapsed,
 .bz_default_collapsed .bz_private_checkbox,
 .bz_default_collapsed .bz_comment_user,
